@@ -253,7 +253,7 @@ public class SimpleCompositionBean {
 
 							files.put("fileId", file.getDomainFile().getId());
 							files.put("isImage", file.isImage());
-							files.put("ExternalURI", new Boolean(file.getDomainFile().getUriExternal()).toString());
+							files.put("ExternalURI", Boolean.valueOf(file.getDomainFile().getUriExternal()).toString());
 							files.put("Title", file.getDomainFile().getTitle());
 
 							files.put("URI", file.getDomainFile().getUri());
@@ -405,7 +405,7 @@ public class SimpleCompositionBean {
 								files.put("fileId", file.getDomainFile()
 										.getId());
 								files.put("isImage", file.isImage());
-								files.put("ExternalURI", new Boolean(file.getDomainFile().getUriExternal()).toString());
+								files.put("ExternalURI", Boolean.valueOf(file.getDomainFile().getUriExternal()).toString());
 								files.put("Title", file.getDomainFile()
 										.getTitle());
 
@@ -507,7 +507,7 @@ public class SimpleCompositionBean {
 								files.put("fileId", file.getDomainFile()
 										.getId());
 								files.put("isImage", file.isImage());
-								files.put("ExternalURI", new Boolean(file.getDomainFile().getUriExternal()).toString());
+								files.put("ExternalURI", Boolean.valueOf(file.getDomainFile().getUriExternal()).toString());
 								files.put("Title", file.getDomainFile()
 										.getTitle());
 
@@ -546,7 +546,7 @@ public class SimpleCompositionBean {
 						comFile.put("fileId", file.getDomainFile().getId());
 						comFile.put("isImage", file.isImage());
 //						files.put("ExternalURI", new Boolean(file.getDomainFile().getUriExternal()).toString());
-						comFile.put("ExternalURI", new Boolean(file.getDomainFile().getUriExternal()).toString());
+						comFile.put("ExternalURI", Boolean.valueOf(file.getDomainFile().getUriExternal()).toString());
 						comFile.put("Title", file.getDomainFile().getTitle());
 
 						comFile.put("URI", file.getDomainFile().getUri());
